// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardsBar does not render ShowMoreButton when userRows is MAX_ROW_COUNT 1`] = `
<ControlBar
  editMode={false}
  height={64}
  onChangeHeight={[Function]}
  onEndDrag={[Function]}
>
  <div
    className="container overflowYHidden"
    style={
      Object {
        "height": 50,
      }
    }
  >
    <div
      className="leftControls"
    >
      <Link
        className="newLink"
        to="/new"
      >
        <AddCircleIcon />
      </Link>
      <Connect(Filter)
        onKeypressEnter={[Function]}
      />
    </div>
  </div>
  <ShowMoreButton
    disabled={true}
    isMaxHeight={false}
    onClick={[Function]}
  />
</ControlBar>
`;

exports[`DashboardsBar renders ShowMoreButton when userRows is less than MAX_ROW_COUNT 1`] = `
<ControlBar
  editMode={false}
  height={64}
  onChangeHeight={[Function]}
  onEndDrag={[Function]}
>
  <div
    className="container overflowYHidden"
    style={
      Object {
        "height": 50,
      }
    }
  >
    <div
      className="leftControls"
    >
      <Link
        className="newLink"
        to="/new"
      >
        <AddCircleIcon />
      </Link>
      <Connect(Filter)
        onKeypressEnter={[Function]}
      />
    </div>
  </div>
  <ShowMoreButton
    disabled={false}
    isMaxHeight={false}
    onClick={[Function]}
  />
</ControlBar>
`;

exports[`DashboardsBar renders a DashboardsBar with no items 1`] = `
<ControlBar
  editMode={false}
  height={64}
  onChangeHeight={[Function]}
  onEndDrag={[Function]}
>
  <div
    className="container overflowYHidden"
    style={
      Object {
        "height": 50,
      }
    }
  >
    <div
      className="leftControls"
    >
      <Link
        className="newLink"
        to="/new"
      >
        <AddCircleIcon />
      </Link>
      <Connect(Filter)
        onKeypressEnter={[Function]}
      />
    </div>
  </div>
  <ShowMoreButton
    disabled={false}
    isMaxHeight={false}
    onClick={[Function]}
  />
</ControlBar>
`;

exports[`DashboardsBar when dashboards are provided renders DashboardItemChips for each item on dashboard 1`] = `
<ControlBar
  editMode={false}
  height={64}
  onChangeHeight={[Function]}
  onEndDrag={[Function]}
>
  <div
    className="container overflowYHidden"
    style={
      Object {
        "height": 50,
      }
    }
  >
    <div
      className="leftControls"
    >
      <Link
        className="newLink"
        to="/new"
      >
        <AddCircleIcon />
      </Link>
      <Connect(Filter)
        onKeypressEnter={[Function]}
      />
    </div>
    <DashboardItemChip
      dashboardId="fluttershy123"
      key="fluttershy123"
      label="Fluttershy"
      selected={false}
      starred={true}
    />
    <DashboardItemChip
      dashboardId="rainbow123"
      key="rainbow123"
      label="Rainbow Dash"
      selected={false}
      starred={false}
    />
  </div>
  <ShowMoreButton
    disabled={false}
    isMaxHeight={false}
    onClick={[Function]}
  />
</ControlBar>
`;

exports[`DashboardsBar when dashboards are provided renders correctly for selected item 1`] = `
<ControlBar
  editMode={false}
  height={64}
  onChangeHeight={[Function]}
  onEndDrag={[Function]}
>
  <div
    className="container overflowYHidden"
    style={
      Object {
        "height": 50,
      }
    }
  >
    <div
      className="leftControls"
    >
      <Link
        className="newLink"
        to="/new"
      >
        <AddCircleIcon />
      </Link>
      <Connect(Filter)
        onKeypressEnter={[Function]}
      />
    </div>
    <DashboardItemChip
      dashboardId="fluttershy123"
      key="fluttershy123"
      label="Fluttershy"
      selected={true}
      starred={true}
    />
    <DashboardItemChip
      dashboardId="rainbow123"
      key="rainbow123"
      label="Rainbow Dash"
      selected={false}
      starred={false}
    />
  </div>
  <ShowMoreButton
    disabled={false}
    isMaxHeight={false}
    onClick={[Function]}
  />
</ControlBar>
`;
